[package]
name = "create-ruxt-app"
version = "0.1.0"
edition = "2021"
description = "Create a new Ruxt app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env-extract = "0.1.22"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0.116"
