[package]
name = "create-ruxt-app"
version = "0.1.0"
edition = "2021"
description = "Create a new Ruxt app"
repository = "https://github.com/duncanlutz/create-ruxt-app"
homepage = "https://ruxt.rs"
readme = "README.md"
keywords = ["ruxt", "actix", "developer-tools", "cli", "web"]
categories = ["web-programming", "development-tools"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env-extract = "0.1.22"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0.116"
